--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,175 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  height: 100%;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 300;
+  background-color: white;
+  color: #222;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-align: center;
+  font-weight: 100;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+}
+
+
+h1 {
+  font-size: 37.5px;
+  margin: .5em 0 .3em;
+}
+
+h2 {
+  font-size: 30px;
+  margin: .5em 0 .3em;
+  text-align: center;
+}
+
+h3 {
+  font-size: 2em
+}
+
+h4 {
+  font-size: 1.75em
+}
+
+h5 {
+  font-size: 1.5em;
+  line-height: 1.5em
+}
+
+h6 {
+  font-size: 1.25em;
+  line-height: 1.25em
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #039be5;
+}
+
+.emphasize {
+  font-style: italic;
+  color: #666;
+}
+
+span.text-capitalize {
+  display: inline-block;
+}
+
+.text-capitalize {
+  text-transform: lowercase;
+
+  &::first-letter {
+    text-transform: uppercase;
+  }
+
+  &:first-letter {
+    text-transform: uppercase;
+  }
+}
+
+.dis-color {
+  color: #01633a;
+}
+
+.mac-color {
+  color: #283480;
+}
+
+.gro-color {
+  color: #49545C;
+}
+
+div.input-field label {
+  font-size: 15px;
+  letter-spacing: .25px;
+  margin-bottom: 4px;
+  display: block;
+  text-align: left;
+
+  &::after {
+    padding-left: .35px;
+    content: ":";
+  }
+}
+
+div.input-field input {
+  border-radius: 6px;
+  border: 2px solid #999;
+  padding: 12px 16px;
+  font-size: 22px;
+  outline: none;
+  display: block;
+  width: 100%;
+  background-color: transparent;
+
+  // @media screen and (prefers-color-scheme: dark) {
+  //   color: white;
+  // }
+
+  &:hover,
+  &:active,
+  &:focus {
+    border-color: #283480;
+  }
+}
+
+div.input-field+div.input-field {
+  margin-top: 12px;
+}
+
+input[type="button"],
+button,
+.button {
+  border: 1px solid #999;
+  background-color: #EEE;
+  border-radius: 4px;
+  padding: 8px 14px;
+  font-size: 15px;
+  cursor: pointer;
+  text-align: center;
+  color: #333;
+  transition: 80ms ease-in-out all;
+
+  &:hover {
+    color: white;
+    background-color: #999;
+  }
+
+  &[color="primary"] {
+    border-color: #283480;
+    background-color: #2196f3;
+    color: white;
+
+    &:hover {
+      background-color: #283480;
+    }
+  }
+
+  &[color="warn"] {
+    background-color: #E74C3C;
+  }
+
+  &[disabled] {
+    border-color: #777;
+    background-color: #bbb;
+    color: #777;
+    pointer-events: none;
+  }
+}
