--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="login">
   <form [formGroup]="loginForm" (submit)="login()">
-    <h1>Login</h1>
+    <h1 translate="pages.login.title"></h1>
     <div class="input-field">
       <label for="username" translate="pages.login.form.username"></label>
       <input autocomplete="username" formControlName="username" id="username" type="text" required>
@@ -15,9 +15,13 @@
       <input autocomplete="current-password" formControlName="password" type="password" required>
     </div>
     <div class="input-field">
-      <button id="login-button" type="submit" [disabled]="loginForm.invalid">
+      <button color="primary" id="login-button" type="submit" [disabled]="loginForm.invalid">
         <span translate="pages.login.form.button"></span>
       </button>
+    </div>
+    <div style="text-align:center;margin-top:1em">
+      <button color="light" (click)="setLang('nl')">NL</button> |
+      <button color="light" (click)="setLang('fr')">FR</button>
     </div>
   </form>
 </div>
