--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -66,4 +66,25 @@
       filter: blur(12px);
     }
   }
+
+  @media screen and (min-width: 1100px) {
+    div.login {
+      width: 420px;
+      margin-left: -210px;
+
+      form {
+        width: 300px;
+      }
+
+      &::before {
+        width: 470px;
+
+        box-shadow: inset 0 0 0 235px rgba(255, 255, 255, 0.6);
+
+        @media screen and (prefers-color-scheme: dark) {
+          box-shadow: inset 0 0 0 235px rgba(0, 0, 0, 0.6);
+        }
+      }
+    }
+  }
 }
