updated dash page

--- a/src/app/pages/account/profile/profile.component.html
+++ b/src/app/pages/account/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="account-page">
   <claes-account-menu></claes-account-menu>
   <section>
-    <p>account works!</p>
+    <p>profile works!</p>
   </section>
 </div>
