added application page, and option to update password

--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -2,5 +2,6 @@
   <claes-account-menu></claes-account-menu>
   <section>
     <p>account works!</p>
+    <claes-account-application-list></claes-account-application-list>
   </section>
 </div>
