--- a/src/app/pages/account/apps/apps.component.html
+++ b/src/app/pages/account/apps/apps.component.html
@@ -1,6 +1,6 @@
 <div class="account-page">
   <claes-account-menu></claes-account-menu>
   <section>
-    <p>apps works!</p>
+    <claes-account-application-list></claes-account-application-list>
   </section>
 </div>
