--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,8 +11,8 @@
       <input autocomplete="username" formControlName="username" id="username" type="text" required>
     </div>
     <div class="input-field">
-      <label for="username" translate="pages.login.form.password"></label>
-      <input autocomplete="current-password" formControlName="password" type="password" required>
+      <label for="password" translate="pages.login.form.password"></label>
+      <input autocomplete="current-password" formControlName="password" id="password" type="password" required>
     </div>
     <div class="input-field">
       <button color="primary" id="login-button" type="submit" [disabled]="loginForm.invalid">
