moved update password to component and updated pages

--- a/src/app/pages/account/apps/apps.component.html
+++ b/src/app/pages/account/apps/apps.component.html
@@ -1,6 +1,7 @@
 <div class="account-page">
   <claes-account-menu></claes-account-menu>
   <section>
+    <h3 translate="pages.account.apps.title"></h3>
     <claes-account-application-list></claes-account-application-list>
   </section>
 </div>
