--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -1,7 +1,9 @@
 <div class="account-page">
   <claes-account-menu></claes-account-menu>
   <section>
-    <p>account works!</p>
+    <h3 translate="pages.account.apps.title"></h3>
     <claes-account-application-list></claes-account-application-list>
+    <h3 translate="pages.account.profile.title"></h3>
+    <claes-account-update-password></claes-account-update-password>
   </section>
 </div>
