updated some deps

--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -3,7 +3,7 @@
   <section>
     <h3 translate="pages.account.apps.title"></h3>
     <claes-account-application-list></claes-account-application-list>
-    <h3 translate="pages.account.profile.title"></h3>
-    <claes-account-update-password></claes-account-update-password>
+    <!-- <h3 translate="pages.account.profile.title"></h3>
+    <claes-account-update-password></claes-account-update-password> -->
   </section>
 </div>
